--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -481,11 +481,11 @@ components:
  
   schemas:
     Name:
+      description: Name of the user that we are considering
       type: string
       pattern: 'ˆ.*?$'
       minLength: 3
       maxLength: 16
-      description: User identification on that social
     
     PhotoId:
       description: value identifying of a photo
@@ -499,8 +499,9 @@ components:
       minLength: 0
       maxLength: 1000000
     Photo:
-      type: object
       description: All items describing a posted photo
+      type: object
+      
       properties:
         photo:
           description: |
@@ -512,7 +513,6 @@ components:
           maxLength: 100000
         photoid:
           $ref: "#/components/schemas/PhotoId"
-        
         User:
           $ref: "#/components/schemas/Name"
           
@@ -525,9 +525,9 @@ components:
           type: integer
           format: int
         datePost:
+          description: Date of photo posting
           type: string
           pattern: 'ˆ.*?$'
-          description: Date of photo posting
           format: "YYYY-MM-DD"
           minLength: 0
           maxLength: 10
@@ -556,9 +556,9 @@ components:
         UserRec: 
           $ref: "#/components/schemas/Name"
         datePost:
+          description: Date of photo posting
           type: string
           pattern: 'ˆ.*?$'
-          description: Date of photo posting
           format: "YYYY-MM-DD"
           minLength: 0
           maxLength: 10
@@ -583,12 +583,13 @@ components:
           
     
     Error:
-      type: object
       description: general error
+      type: object
       properties:
         code:
-          type: string
+          
           description: The code of the error
+          type: string
           pattern: "ˆ.*?$"
           minLength: 0
           maxLength: 5
