--- a/webui/package.json
+++ b/webui/package.json
@@ -10,11 +10,12 @@
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
+		"js-sha256": "^0.9.0",
 		"vue": "^3.2.37",
 		"vue-router": "^4.1.3"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^3.0.1",
-		"vite": "^3.0.4"
+		"vite": "^3.2.7"
 	}
 }
