--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,5 +3,5 @@ WORKDIR /src/
 COPY webui webui
 WORKDIR /src/webui
 RUN npm install && npm run build-prod
-FROM nginx:1.21.3
+FROM nginx:stable
 COPY --from=builder /src/webui/dist /usr/share/nginx/html
